=============================
CHANGELOG JiNN for eGroupWare
=============================
$Id$

Mayor updates and when database changes the versionnumber increases.
Minor updates only get a new alphabet character. 

Version 0.8.210f
===========================
Wed Feb 16 17:01:53 CET 2005
- code cleanup in boadmin
- fix Timestamp plugin display

Version 0.8.210e
===========================
Tue Feb 15 17:53:34 CET 2005
- fixed db fields plugins display in setup (about jinn)
- display object events plugins in about jinn
- changed author in ob.ev.plugin: email to lex vogelaar
- implemented special field prefix for foreign value
- implemented the ability to use the substituted foreign value of a field in the email ob.ev.plugin
- isolated the one2many input renderering to a separate function
- cleanup the edit_record form generator a little

Version 0.8.210d
===========================
Tue Feb 15 17:43:49 CET 2005
- implemented on_update for multiple record update

Version 0.8.210c
Mon Feb 14 CET 2005
============================
- implemented multiple records view
- small layout change single record view

Version 0.8.210b
Thu Feb 11 CET 2005
============================
- implemented object event plugin system
- fixed class variable 'plug' was not declared in boadmin class

Version 0.8.210
Thu Feb 11 CET 2005
============================
- implemented column filters in List Records
- started object event plugin system

Version 0.8.209
Thu Feb 04 10:34:32 CET 2005
============================
- implemented default columnview implementation
- one-to-many and many-to-many relations now can have up to 3 display fields
- fixed bug many-to-many relations were not stored after editing
- implemented default value in one-to-many relation
- storage of relations now serialized array (with silent conversion when editing object)
- fixed bug in listview where fields were not displaying their corresponding value in a one-to-many relation
- implemented preset plugin