@@ -30,7 +30,7 @@
 		'Add Site' => $GLOBALS['phpgw']->link('/index.php','menuaction=jinn.uiadmin.add_edit_site'),
 		'Browses Through Sites' => $GLOBALS['phpgw']->link('/index.php','menuaction=jinn.uiadmin.browse_egw_jinn_sites'),
 		'Import Site' => $GLOBALS['phpgw']->link('/index.php','menuaction=jinn.uiadmin.import_egw_jinn_site'),
-		'Access Rights' => $GLOBALS['phpgw']->link('/index.php','menuaction=jinn.uiadmin.access_rights')
+		'Access Rights' => $GLOBALS['phpgw']->link('/index.php','menuaction=jinn.uiacl.main_screen')
 	);
 	//Do not modify below this line
 	display_section($appname,$title,$file);
